<resources>
    <string name="app_name">ClassSample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sanlorng\'s Test</string>
    <string name="nav_header_subtitle">sanlorng@github.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="dev_android_first">初始Android开发</string>
    <string name="intent_usage">Intent意图</string>
    <string name="sign_in_and_dialog">登录与对话控件</string>
    <string name="list_view_usage">ListView列表</string>
    <string name="data_and_share_preferences_usage">数据库与数据持久化</string>
    <string name="music_player">音乐播放器</string>
    <string name="notification_broad_usage">通知和广播</string>
    <string name="ok_http_usage">OkHttp的应用</string>
    <string name="sendMessage">发送信息</string>
    <string name="createBatteryNotification">创建电量通知</string>
    <string name="cancelBatteryNotification">取消电量通知</string>
    <string name="sendBroadcast">发送广播</string>
    <string name="showToast">显示Toast</string>
    <string name="inputContent">输入内容</string>
    <string name="startMessageActivity">启动MessageActivity</string>
    <string name="startHiddenActivity">启动HiddenActivity</string>
    <string name="simpleDialog">简单对话框</string>
    <string name="singleDialog">单选对话框</string>
    <string name="multiDialog">多选对话框</string>
    <string name="loginDialog">登录对话框</string>
    <string name="play">播放</string>
    <string name="playList">播放列表</string>
    <string name="openNotification">打开通知</string>
    <string name="loginUI">登录界面</string>
    <string name="progressAndDialog">进度条与对话框</string>
    <string name="readDatabaseContent">查看数据库内容</string>
    <string name="albumCover">专辑封面</string>
    <string name="login">Login</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="rememberMe">记住我</string>
    <string name="loginCN">登录</string>
    <string name="register">注册</string>
    <string name="playPrevious">播放上一首</string>
    <string name="playNext">播放下一首</string>
    <string name="extendPlayList">展开播放列表</string>
    <string name="nextPlayType">播放模式</string>
    <string name="contentProvider">内容提供器</string>
</resources>
