<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MusicPlayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_music_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_keyboard_arrow_down_black_48dp" />
    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="92dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="16dp">

        <ImageView
            android:contentDescription="@string/albumCover"
            android:id="@+id/imageAlbumPlayActivity"
            android:src="@drawable/drawable_gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars[0]" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textTitlePlayActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textSubtitlePlayActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/textPlayingFileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="" />

    <SeekBar
        android:id="@+id/seekBarPlayingActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal">

        <ImageButton
            android:contentDescription="@string/playPrevious"
            android:id="@+id/buttonLastMusicActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_skip_previous_black_48dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:theme="@style/Platform.MaterialComponents.Light"
            android:id="@+id/buttonPlayMusicActivity"
            android:layout_gravity="center"
            app:elevation="4dp"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:rippleColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            app:iconTint="?attr/colorPrimary"
            app:iconSize="36dp"
            app:icon="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:contentDescription="@string/playNext"
            android:id="@+id/buttonNextPlayMusicActivity"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            app:srcCompat="@drawable/ic_skip_next_black_48dp" />
    </FrameLayout>
    </LinearLayout>
    <RelativeLayout
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textDragBottomSheetMusicList"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/extendPlayList"
            android:drawableStart="@drawable/ic_keyboard_arrow_up_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/textDragBottomSheetMusicList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>